--- a/workshop1/w0.html
+++ b/workshop1/w0.html
@@ -6,11 +6,13 @@
      REPLACE THIS TEXT and add some text below; press the commit changes
      button in github; reload the file in the browser. How are spaces 
      and line breaks handled?
+     
+     Corn is the best crop, wheat is the worst crop.
 
      https://developer.mozilla.org/en-US/Learn/HTML/Introduction_to_HTML/Getting_started
 -->
 
-Is
+Is it true that guavas are my favorite fruit?
 
   <a href = "view-source:http://bardcollege.github.io/workshop1/w0.html">Code</a>
 
