--- a/workshop1/w0.html
+++ b/workshop1/w0.html
@@ -7,12 +7,10 @@
      button in github; reload the file in the browser. How are spaces 
      and line breaks handled?
      
-     Corn is the best crop, wheat is the worst crop.
-
      https://developer.mozilla.org/en-US/Learn/HTML/Introduction_to_HTML/Getting_started
 -->
 
-Is it true that guavas are my favorite fruit?
+Stop! Okay? 
 
   <a href = "view-source:http://bardcollege.github.io/workshop1/w0.html">Code</a>
 
