--- a/workshop1/w0.html
+++ b/workshop1/w0.html
@@ -3,7 +3,7 @@
 
      You are viewing the source code of this web page.
 
-     I love ska music! There is a ska themed restaurant in Red Hook named Charlie's!
+     Let me relay a message to you in morse code: long beep, beep, beep, long beep, beep, beep, beep, long beep.
      
      https://developer.mozilla.org/en-US/Learn/HTML/Introduction_to_HTML/Getting_started
 -->
