--- a/workshop1/w0.html
+++ b/workshop1/w0.html
@@ -8,8 +8,7 @@
      https://developer.mozilla.org/en-US/Learn/HTML/Introduction_to_HTML/Getting_started
 -->
 
-Stop! Okay? 
-
+Continue if you wish to PERISH in my greedy HANDS!
   <a href = "view-source:http://bardcollege.github.io/workshop1/w0.html">Code</a>
 
     <code>Language</code>?
