--- a/workshop1/w1.html
+++ b/workshop1/w1.html
@@ -19,10 +19,10 @@
 </blockquote>
 
 <blockquote>
-  "A human must turn information into intelligence or
-  knowledge. We've tended to forget that no computer will ever ask
-  a new question." &mdash; <a href =
-"https://en.wikipedia.org/wiki/Grace_Hopper">Grace Hopper</a>
+(i do not know what it is about you that closes
+and opens;only something in me understands
+the voice of your eyes is deeper than all roses)
+nobody,not even the rain,has such small hands
 </blockquote>
 
 <h3>Quotes on Language</h3>
