--- a/workshop1/w1.html
+++ b/workshop1/w1.html
@@ -11,7 +11,7 @@
 
 <blockquote>
   Boo Boo Bwop Boo Boo Bwop Boo Boo Bwop Boo Boo Bwop Boo Boo Bwop Boo Boo Bwop Boo Boo Bwop Boo Boo Bwop Boo Boo Bwop
-  &mdash; <a href = "https://en.wikipedia.org/wiki/Fred_Brooks">Fred Brooks</a>
+  &mdash; <a href = Charlie Miller
 </blockquote>
     
 <blockquote>
