--- a/workshop1/w1.html
+++ b/workshop1/w1.html
@@ -23,6 +23,7 @@
 and opens;only something in me understands
 the voice of your eyes is deeper than all roses)
 nobody,not even the rain,has such small hands
+&mdash; <a href = "https://en.wikipedia.org/wiki/E._E._Cummings">E.E. Cummings</a>
 </blockquote>
 
 <h3>Quotes on Language</h3>
