--- a/workshop1/w2.html
+++ b/workshop1/w2.html
@@ -21,9 +21,9 @@
     <h3>DECODING CODE: What do we mean by code?</h3>
 
     <ul>
-      <li>Computer Programs (e.g., <a href = "https://developer.mozilla.org/en-US/Learn/Getting_started_with_the_web/JavaScript_basics">Javascript</a>)</li>
-      <li>Codes of Conduct (e.g., <a href = "https://epic.org/privacy/terrorism/hr3162.html">Laws</a>)</li>
-      <li>Ciphers (e.g. <a href = "http://www.simonsingh.net/The_Black_Chamber/caesar.html">Caesar Secret Codes</a>)</li>
+      <li>E.E. Cummings (e.g., <a href = https://en.wikipedia.org/wiki/E._E._Cummings</a>)</li>
+      <li>Sarah Kay (e.g., <a href = https://en.wikipedia.org/wiki/Sarah_Kay_(poet)</a>)</li>
+      <li>An Almost Made Up Poem (e.g. <a href = http://www.poemhunter.com/poem/an-almost-made-up-poem/</a>)</li>
       <li>Language Encodings (e.g., <a href = "https://en.wikipedia.org/wiki/ASCII">ASCII</a> and <a href = "http://unicode.org/charts/">Unicode</a>)</li>
       <li>Compressions Schemes (e.g., <a href = "http://www.ams.org/samplings/feature-column/fcarc-image-compression">JPEG image compression</a>)</li>
     </ul>
