--- a/workshop1/w2.html
+++ b/workshop1/w2.html
@@ -11,7 +11,7 @@
 <html>
 
   <head>
-    <title>Bard College Language and Thinking</title>
+    <title>Bread Colleague</title>
   </head>
 
   <body>
