--- a/workshop1/w2.html
+++ b/workshop1/w2.html
@@ -21,9 +21,9 @@
     <h3>DECODING CODE: What do we mean by code?</h3>
 
     <ul>
-      <li>E.E. Cummings (e.g.,) <a href = https://en.wikipedia.org/wiki/E._E._Cummings/>a</li>
-      <li>Sarah Kay (e.g.,) <a href = https://en.wikipedia.org/wiki/Sarah_Kay_(poet)/>a</li>
-      <li>An Almost Made Up Poem (e.g.) <a href = http://www.poemhunter.com/poem/an-almost-made-up-poem/>a</li>
+      <li>E.E. Cummings (e.g.,) <a href = https://en.wikipedia.org/wiki/E._E._Cummings/li>
+      <li>Sarah Kay (e.g.,) <a href = https://en.wikipedia.org/wiki/Sarah_Kay_(poet)/li>
+      <li>An Almost Made Up Poem (e.g.) <a href = http://www.poemhunter.com/poem/an-almost-made-up-poem/li>
       <li>Language Encodings (e.g., <a href = "https://en.wikipedia.org/wiki/ASCII">ASCII</a> and <a href = "http://unicode.org/charts/">Unicode</a>)</li>
       <li>Compressions Schemes (e.g., <a href = "http://www.ams.org/samplings/feature-column/fcarc-image-compression">JPEG image compression</a>)</li>
     </ul>
